Bug 847: Instruction page / CSS Text-align: centered ordered lists Bug 846: Bad link to documentation Some CSS Hacks in Admin theme
git-svn-id: http://piwigo.org/svn/trunk@2495 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/template/yoga/theme/admin/theme.css
+++ b/admin/template/yoga/theme/admin/theme.css
@@ -43,7 +43,8 @@ letter-spacing:0.1em; margin-right:30px; text-align:right; color: #777;
 text-transform:none; font-weight:bold; padding-left:20px; }
 .content dl, dd { margin:5px; }
 .content div.titrePage { height:55px; }
-
+.content ol li { text-align: left; }
+.instructions { text-align: left; padding: 20px 20px 0 20px; }
 .throw, td h3 {
  background-image: url(images/fillet.png); background-repeat: repeat-x; }
 .browsePath a { color: #eee; }
@@ -103,8 +104,14 @@ background:transparent url(images/active_tab_letters.png) no-repeat scroll left 
 /* menubar is on all admin pages => No specific css file */
 #menubar {
 background:transparent url(images/menuBoxBottom_new.png) no-repeat scroll left bottom;
-border:0; display:inline; float:left; left:0; margin: 0 0 0 35px; min-height:477px; height:477px;
+border:0; display:inline; float:left; left:0; margin: 0 0 0 35px; min-height:475px; height:475px; /* should be 477 */
 padding:0; width:207px; z-index:99; text-align: left; }
+#menubar ul.scroll { overflow-y:auto; height: 148px; margin-right:8px;
+ /* Only IE family supports colored scrollbar */
+ scrollbar-face-color: #222; scrollbar-shadow-color: #444; scrollbar-highlight-color: #000;
+ scrollbar-3dlight-color: #292929; scrollbar-darkshadow-color: #333; scrollbar-track-color: #111;
+ scrollbar-arrow-color: #ff3333; }
+html>body #menubar {min-height:477px; height:477px;} /* IE 7 and modern browsers */
 #menubar .selected a { color: #f70; border-color: #f36;}
 #menubar .selected a:hover { color: #f36; border-bottom: 1px solid #f36;}
 #menubar dd { 
